--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -37,13 +37,17 @@ h1 {
     float: right;
     margin-top: 20px;
     margin-right: 30px;
-   
 
-}
+ 
   @media screen and (max-width: 480px) {
     body {
       background-color: lightgreen;
     }
+    
+    .displaynone {
+       display:none;
+    }
+
   }
   
   @media (max-width: 767px) {
