--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -18,14 +18,16 @@ header {
  
   }
 
-.row {
-    margin-top: 20px;
-    height: 350px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
+img {
+    padding: 20px;
 }
 
-#gallery2 {
-    margin-top: 20px;
-}
+
+/* text for the images */
+.text-block {
+   padding-left: 20px;
+   padding-right: 20px;
+   padding-top: 10px;
+   padding-bottom: 10px;
+   text-align: center;
+  }
