--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -31,3 +31,19 @@ img {
    padding-bottom: 10px;
    text-align: center;
   }
+
+  @media (max-width: 480px) {
+   
+  
+  
+   
+  }
+  
+  @media (max-width: 767px) {
+
+
+
+
+
+    
+  }
