--- a/CSS/aboutme.css
+++ b/CSS/aboutme.css
@@ -59,9 +59,8 @@ h3 {
 
     
         img {
-        
-        width: 100% ;
-        
+         display: none;
+    
         }
         
         }
