--- a/CSS/aboutme.css
+++ b/CSS/aboutme.css
@@ -1,12 +1,13 @@
 body {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 22px;
+    font-family: Georgia, 'Times New Roman', Times, serif; /*set font*/
+    font-size: 22px; /*set font size */
+   
 }
 
 header {
     margin-top: 30px;
     margin-left: 30px;
-    margin-right: 40px;
+    margin-right: 30px;
    
 }
 
@@ -22,23 +23,42 @@ h3 {
     margin-bottom: 20px;
 }
 
+h4 {
+    text-align: center;
+    padding: 20px;
+}
 
+/*biography photo */
 .img-thumbnail {
     float: left;
     margin-left:20px;
+    width: fit-content;
 }
 
+/*biography text */
 .bio {
     float:right;
     
 }
 
+/*navigation bar*/
 .navbar {
     background-color: #99ced3;
     color: #ffffff;
  
   }
+
+  /*sticky footer */
+footer {
+    background-color: #99ced3;
+    color: #ffffff;
+    margin: 30px;
+   
  
+}
+ 
+
+ /*mefia ruqries */ 
 @media screen and (max-width: 480px) {
 
     body {
@@ -47,20 +67,23 @@ h3 {
     
     }
     
-    img {
-    
-    width: 100% ;
-    
-    }
+    .img-thumbnail {
+        width: 35%
+   
+       }
     
     }
 
     @media screen and (max-width: 767px) {
 
     
-        img {
-         display: none;
+        .img-thumbnail {
+         width: 50%
     
+        }
+
+        body {
+            font-size: 18px;
         }
         
         }
