--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,14 +1,11 @@
+
+/*set font style and font size */
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 22px;
     
 }
 
-.backgroung {
-    background-image: url(../image/sean-o-KMn4VEeEPR8-unsplash.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
     
 header {
     margin-top: 30px;
@@ -22,17 +19,26 @@ h1 {
     margin-bottom: 15px;
     font-size: 28px;
 }
+
+/*navigation bar */
 .navbar {
     background-color: #99ced3;
     color: #ffffff;
  
   }
+/*sticky footer */
+footer {
+    background-color: #99ced3;
+    color: #ffffff;
+    margin: 30px;
+ 
+}
 
 .display {
     display: flex;
 }
 
-
+/*grid system */
 .container {
     margin-top: 30px;
     margin-left: 20px;
@@ -41,22 +47,23 @@ h1 {
 }
 
 
-
+/*photo */
 .oceanimage {
     float: right;
     margin-top: 20px;
     margin-right: 30px;
+    margin-bottom: 20px;
 }
  
 
   @media (max-width: 480px) {
     body {
-        background-image: url(../image/shifaaz-shamoon-okVXy9tG3KY-unsplash.jpg);
+        background-image: url(../image/shifaaz-shamoon-okVXy9tG3KY-unsplash.jpg); 
+        /*different backgroung image for smaller screen */
         background-size: cover;
         color: #ffffff;
       }
-  
-  
+      
   
    
   }
@@ -64,6 +71,7 @@ h1 {
   @media (max-width: 767px) {
     body {
       background-image: url(../image/shifaaz-shamoon-okVXy9tG3KY-unsplash.jpg);
+      /*different backgroung image for smaller screen */
       background-size: cover;
       color: #ffffff;
     }
