--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -43,3 +43,26 @@ img {
    text-align: center;
   }
 
+  /*mefia ruqries */
+@media screen and (max-width: 480px) {
+
+    body {
+        font-size: 14px ;
+    
+    }
+
+    h4 {
+        font-size: 16px;
+    }
+}
+
+    @media screen and (max-width: 767px) {
+
+    
+        
+
+        body {
+            font-size: 18px;
+        } 
+        
+        }
