--- a/assets/CSS/aboutme.css
+++ b/assets/CSS/aboutme.css
@@ -1,12 +1,14 @@
-body {
-    font-family: Georgia, 'Times New Roman', Times, serif; /*set font*/
-    font-size: 22px; /*set font size */
-    background-color:#030321;
-    color: #FFEEEE;
-    
+/* // best seen at 1500px or less */
 
-   
+ /* html, body { height: 100%; } */
+body {
+  /* background:radial-gradient(ellipse at center, rgba(255,254,234,1) 0%, rgba(255,254,234,1) 35%, #B7E8EB 100%); */
+  font-family: Georgia, 'Times New Roman', Times, serif; /*set font*/
+  font-size: 22px; /*set font size */
+  background-color:#030321;
+  color: #FFEEEE;
 }
+
 
 header {
     margin-top: 30px;
@@ -95,6 +97,26 @@ footer {
 }
 a{
     color: #FFEEEE;
+}
+
+
+
+@keyframes wave {
+  0% {
+    margin-left: 0;
+  }
+  100% {
+    margin-left: -1600px;
+  }
+}
+
+@keyframes swell {
+  0%, 100% {
+    transform: translate3d(0,-25px,0);
+  }
+  50% {
+    transform: translate3d(0,5px,0);
+  }
 }
 
 /*media ruqries */
