--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -45,6 +45,7 @@ h1 {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none !important;
+    max-width: 1280px;
  
   }
 
@@ -61,6 +62,7 @@ footer {
     font-weight: 400;
     font-size: 30px;
     text-align: right;
+    max-width:1280px;
    
 }
 /* 
@@ -85,6 +87,8 @@ footer {
     /* margin-right: 10px; */
     margin-bottom: 20px;
 }
+
+
 
 
 
@@ -132,7 +136,7 @@ footer {
         margin-top: 100vh;
         padding: 2em 0;
         background-color: #203b47;
-        box-shadow: 0 0 1em rgba(0,0,0,0.6);
+        box-shadow: 0 0 1em rgba(0,0,0,0.6);;
         font-weight: 400;
         font-size: 30px;
         text-align: right;
@@ -141,6 +145,12 @@ footer {
     .text-muted{
         margin-right: 20px;
     }
+    footer{
+        text-align: center;
+        font-size: 24px;
+      }
+   
+  
       
 
   }
