--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -120,6 +120,7 @@ footer {
     .text-muted{
         margin-right: 20px;
     }
+
       
 
   }
@@ -148,7 +149,11 @@ footer {
     footer{
         text-align: center;
         font-size: 24px;
-      }
+    }
+    .navbar-text{
+            font-size: 30px;
+        }
+      
    
   
       
