--- a/assets/CSS/portfolio.css
+++ b/assets/CSS/portfolio.css
@@ -100,6 +100,9 @@ p{
         text-align: center;
         font-size: 24px;
       }
+      .navbar-text{
+        font-size: 36px;
+      }
 }
 
   
