--- a/assets/CSS/aboutme.css
+++ b/assets/CSS/aboutme.css
@@ -34,6 +34,9 @@ h3 {
     text-align: center;
     margin-bottom: 20px;
 }
+.hello{
+  text-align: center;
+}
 
 h4 {
     text-align: center;
@@ -102,7 +105,25 @@ footer {
 a{
     color: #FFEEEE;
 }
+@keyframes fadeAndScale{
+  0%{
+    opacity: 0;
+    transform: scale3d(.75, .75, 1);
+  }
 
+  70%{
+    opacity: 0;
+    transform: scale3d(.75, .75, 1);
+  }
+
+  100%{
+    opacity: 1;
+    transform: scale3d(1, 1, 1);
+  }
+}
+$el .e-text-content-text-headline{
+  animation: fadeAndScale 1s cubic-bezier
+}
 
 
 
@@ -124,66 +145,37 @@ a{
 
 @media screen and (max-width: 480px) {
 
-    body {
+ body {
         font-size: 18px ;
     
     }
-    #subcol-image{
+ #subcol-image{
         display: flex;
         
 
     }
-    footer{
+ footer{
       text-align: center;
       font-size: 24px;
 
     }
 
-    #menuToggle
-{
-  display: block;
-  position: relative;
-  top: 50px;
-  left: 50px;
-  
-  z-index: 1;
-  
-  -webkit-user-select: none;
-  user-select: none;
-}
-
-#menuToggle a
-{
-  text-decoration: none;
-  color: #232323;
-  
-  transition: color 0.3s ease;
-}
-
-#menuToggle a:hover
-{
-  color: tomato;
-}
-
-
-#menuToggle input
-{
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -7px;
-  left: -5px;
-  
-  cursor: pointer;
-  
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
-  
-  -webkit-touch-callout: none;
-}
-.navbar-text{
+   
+  .navbar-text{
   font-size: 36px;
+
+  }
+  #menu{
+  background-color:#f9d2e6;
+  padding-right: 20px;
+ 
+  }
+  h4 {
+   font-size: 28px;
+}
+p{
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 }
