adding animation background

--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -54,6 +54,10 @@ h1 {
     color: black;
     font-size: 40px;
 }
+#menu a.nav-link:hover{
+    color: rgb(235, 118, 177);
+  
+  }
 /*sticky footer */
 footer {
     margin-top: 100vh;
