--- a/assets/CSS/aboutme.css
+++ b/assets/CSS/aboutme.css
@@ -141,7 +141,8 @@ h4 {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none !important;
-    max-width:1280px;
+    max-width: 1280px;
+    margin: auto;
     
  
   }
@@ -164,7 +165,7 @@ footer {
     font-size: 30px;
     text-align: right;
     max-width: 1280px;
-   
+    margin: auto;
 }
 
 #links{
