--- a/assets/CSS/portfolio.css
+++ b/assets/CSS/portfolio.css
@@ -33,6 +33,7 @@ header {
     -ms-user-select: none;
     user-select: none !important;
     max-width:1280px;
+    margin: auto;
  
   }
 .navbar-text{
@@ -57,6 +58,7 @@ footer {
     font-size: 30px;
     text-align: right;
     max-width:1280px;
+    margin: auto;
  
 }
 
