--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -3,7 +3,7 @@
 body {
     font-family: Georgia, 'Times New Roman', Times, serif; /*set font*/
     font-size: 22px; /*set font size */
-    background-color:#030321;
+    /* background-color:#030321; */
     color: #FFEEEE;
 }
 
@@ -13,7 +13,19 @@ header {
     margin-left: 30px;
     margin-right: 40px;
 }
-   
+
+.bg-hero{
+    background-image: url(../image/sean-o-KMn4VEeEPR8-unsplash.jpg);
+    /* height: 100vh; */
+    width: 100vw;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 0;
+    margin-right: 0;
+}
 h1 {
     margin-top: 30px;
     margin-left: 15px;
@@ -21,6 +33,12 @@ h1 {
     font-size: 28px;
 }
 
+.contact-me-card{
+    padding: 20px 40px;
+    background-color: rgba(230, 230, 230, 0.7);
+    margin-bottom: 30px;
+    border: none;
+}
 
 
 .btn-info {
