--- a/assets/CSS/portfolio.css
+++ b/assets/CSS/portfolio.css
@@ -1,28 +1,21 @@
 /*set font style and font size */
 body {
+    /* background:radial-gradient(ellipse at center, rgba(255,254,234,1) 0%, rgba(255,254,234,1) 35%, #B7E8EB 100%); */
     font-family: Georgia, 'Times New Roman', Times, serif; /*set font*/
     font-size: 22px; /*set font size */
-    background-color:#030321;
+    /* background-color:#030321; */
     /* color: #FFEEEE; */
-    
-}
+  }
 
-
-
-header {
-    margin-top: 30px;
-    margin-left: 30px;
-    margin-right: 40px;
-   
-}
 
 /*navigation bar */
 .navbar {
-    background-color: #FFEEEE;
-    background: linear-gradient(10deg, #EEDDDD 0%, #FFEEEE 100%);
-    box-shadow: 0 0 1em rgba(0,0,0,0.3);
+    background-color: #fff;
+    /* background: linear-gradient(10deg, #EEDDDD 0%, #FFEEEE 100%); */
+    box-shadow: 2px 2px 15px grey;
+    /* position: fixed; */
     top: 0;
-    width: 100%;
+    width: 100vw;
     height: 4.2em;
     z-index: 3;
     text-align: right;
@@ -32,41 +25,51 @@ header {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none !important;
-    max-width:1280px;
+    max-width: 1280px;
     margin: auto;
+    margin-bottom: 20px;
  
   }
+
 .navbar-text{
     color: black;
     font-size: 40px;
 }
 #menu a.nav-link:hover{
-    color: rgb(235, 118, 177);
-  
+    /* color: rgb(235, 118, 177); */
+    background-color: #b3b6b8;
+    border: none;
+    /* border: darkgrey 1px solid;
+    border-radius: 3px;
+   */
   }
-/* #menu{
-    font-size: 28px;
-} */
+
 
 /*sticky footer */
 footer {
     margin-top: 100vh;
     padding: 2em 0;
-    background-color: #203b47;
+    background-color :#1b688a;
     box-shadow: 0 0 1em rgba(0,0,0,0.6);
     font-weight: 400;
     font-size: 30px;
     text-align: right;
-    max-width:1280px;
+    max-width: 1280px;
     margin: auto;
- 
+    /* margin-top: 20px; */
 }
-
+.text{
+  color: #FFF;
+}
 /*image garally */
 #gallery-row1, #gallery-row2, #gallery-row3{
     margin-top: 20px;
+    margin-bottom: 20px;
     margin-right: 10px auto;
     margin-left: 10px auto;
+}
+#gallery-row3{
+    margin-bottom: 20px auto;
 }
 img {
     /* padding: 20px; */
@@ -78,9 +81,23 @@ img {
     margin: 0 auto;
 }
 
+.link-btns {
+    align-items: center;
+    vertical-align: middle;
+    display: inline-block;
+    margin-left: 10px;
+}
+
 .btn-link{
     border: #111 2px solid;
+    margin-bottom: 5px;
+    align-items: center;
+    color: #111111;
     /* padding: 20px; */
+}
+
+.btn-link:hover{
+    color: blue;
 }
 
 .repo-title{
@@ -128,14 +145,21 @@ p{
 }
 
   /*media ruqries */
-@media screen and (max-width: 767px) {
-
-    
-        
+@media screen and (max-width: 900px) {
+ 
 
     body {
         font-size: 18px;
     } 
+
+    .card{
+        margin-bottom: 20px;
+    }
+    #menu{
+        background-color:#bbe6f7;
+        padding-right: 20px;
+       
+        }
     
     }
 @media screen and (max-width: 480px) {
@@ -148,6 +172,10 @@ p{
     h4 {
         font-size: 20px;
     }
+    .card{
+        margin-bottom: 20px;
+    }
+
     footer{
         text-align: center;
         font-size: 24px;
@@ -155,11 +183,11 @@ p{
       .navbar-text{
         font-size: 36px;
       }
-      #menu{
-        background-color:#f9d2e6;
+    #menu{
+        background-color:#bbe6f7;
         padding-right: 20px;
        
-      }
+        }
 }
 
   
