--- a/assets/CSS/portfolio.css
+++ b/assets/CSS/portfolio.css
@@ -143,7 +143,31 @@ p{
     font-size: 18px;
    
 }
+/* .content-hover {
+    position: relative;
+    font: 3em;
+}
+.img-redirect {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
 
+.text-redirect {
+    width: 10em;
+    font-size: 60px;
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+} */
   /*media ruqries */
 @media screen and (max-width: 900px) {
  
