navbar and card components update

--- a/portfolio/src/components/HeaderHero/style.css
+++ b/portfolio/src/components/HeaderHero/style.css
@@ -1,5 +1,5 @@
 .header-img {
-    /* background-image: url(../../public/images/surf-me.JPG); */
+    /* background-image: url(/images/surf-me.jpg); */
     height: 60vh;
     width: 100vw;
     background-repeat: no-repeat;
