--- a/portfolio/src/components/HeaderHero/style.css
+++ b/portfolio/src/components/HeaderHero/style.css
@@ -9,3 +9,10 @@
     margin-left: 0;
     margin-right: 0;
   }
+
+  .title{
+    margin-top: 20px;
+    display: block;
+    text-align: center;
+  
+}
