--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,4 +1,4 @@
-body, html, code {
+* {
   margin: 0;
   font-family: Georgia, 'Times New Roman', Times, serif; /*set font*/
   font-size: 22px; /*set font size */
