--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,9 +1,8 @@
-body, html, code {
+.app {
   margin: 0;
   font-family: Georgia, 'Times New Roman', Times, serif; /*set font*/
   font-size: 22px; /*set font size */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 
