--- a/portfolio/src/components/Card/style.css
+++ b/portfolio/src/components/Card/style.css
@@ -53,7 +53,7 @@ img {
     margin-top: 20px;
 }
 p{
-    font-size: 16px;
+    font-size: 18px;
 }
 
 
@@ -63,7 +63,7 @@ p{
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
-    color:  #FFEEEE;
+    color:  #111111;
 }
 
 #github-link{
