--- a/portfolio/src/components/Footer/style.css
+++ b/portfolio/src/components/Footer/style.css
@@ -7,7 +7,7 @@ footer {
     font-weight: 400;
     font-size: 30px;
     text-align: right;
-    max-width: 1280px;
+    /* max-width: 1280px; */
     margin: auto;
 }
 .text{
