--- a/portfolio/src/components/HeaderHero/style.css
+++ b/portfolio/src/components/HeaderHero/style.css
@@ -14,9 +14,11 @@
 
   .title{
     margin-top: 40px;
+    margin-left: 50px;
     display: block;
     text-align: center;
     color: #FFF;
+    font-size: 28px;
   
 }
 
